Fix compilation for unused but not set

https://bugzilla.gnome.org/show_bug.cgi?id=654572